fix-z-index

--- a/css/header.css
+++ b/css/header.css
@@ -36,8 +36,8 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 9999999;
   box-shadow: 0 0 6px 1px rgba(0, 0, 0, 0.1);
+  z-index: 99999999;
 }
 .fixed-header .main-header .logo img {
   max-height: 35px;
@@ -49,7 +49,7 @@
   background: white;
   transition: all 0.4s ease;
   padding: 8px 40px;
-  z-index: 1000;
+  z-index: 9999999;
 }
 @media only screen and (max-width: 1199px) {
   .main-header {
