--- a/scss/_page-header.scss
+++ b/scss/_page-header.scss
@@ -24,7 +24,7 @@
   background: white;
   transition: all 0.4s ease;
   padding: 8px 40px;
-  z-index: 1000;
+  z-index: 9999999;
   @include mq(max_lg) {
     padding-left: 0;
     padding-right: 0;
